# rust-learning-records

./: Cargo.toml  README.md
Avariable/: Cargo.toml
Avariable/src/: book.rs  lib.rs  user.rs
Avariable/src/address/: mod.rs
Avariable/src/multip/: mod.rs
Avariable/src/name/: eat.rs  mod.rs  people.rs
http_server/: docker-compose.yml
http_server/src/: lib.rs
movies_lib/src/: lib.rs
src/: main.rs
