[package]
name = "rust-learning-records"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
movies_lib = { path ="movies_lib"}
Avariable = { path = "Avariable"}
http_server = {path = "http_server"}